Packages/Tracking/Core/Runtime/Plugins/Android/Other/arm64-v8a/LeapC.h

typedef __int64 int64_t;
typedef unsigned __int32 uint32_t;
typedef unsigned __int64 uint64_t;
typedef enum _eLeapRS {
  eLeapRS_Success                       = 0x00000000,
  eLeapRS_UnknownError                  = 0xE2010000,
  eLeapRS_InvalidArgument               = 0xE2010001,
  eLeapRS_InsufficientResources         = 0xE2010002,
  eLeapRS_InsufficientBuffer            = 0xE2010003,
  eLeapRS_Timeout                       = 0xE2010004,
  eLeapRS_NotConnected                  = 0xE2010005,
  eLeapRS_HandshakeIncomplete           = 0xE2010006,
  eLeapRS_BufferSizeOverflow            = 0xE2010007,
  eLeapRS_ProtocolError                 = 0xE2010008,
  eLeapRS_InvalidClientID               = 0xE2010009,
  eLeapRS_UnexpectedClosed              = 0xE201000A,
  eLeapRS_UnknownImageFrameRequest      = 0xE201000B,
  eLeapRS_UnknownTrackingFrameID        = 0xE201000C,
  eLeapRS_RoutineIsNotSeer              = 0xE201000D,
  eLeapRS_TimestampTooEarly             = 0xE201000E,
  eLeapRS_ConcurrentPoll                = 0xE201000F,
  eLeapRS_NotAvailable                  = 0xE7010002,
  eLeapRS_NotStreaming                  = 0xE7010004,
  eLeapRS_CannotOpenDevice              = 0xE7010005,
  eLeapRS_Unsupported                   = 0xE7010006,
} eLeapRS;
typedef struct _LEAP_CONNECTION *LEAP_CONNECTION;
typedef struct _LEAP_DEVICE *LEAP_DEVICE;
typedef struct _LEAP_DEVICE_REF {
  void* handle;
  uint32_t id;
} LEAP_DEVICE_REF;
typedef enum _eLeapTrackingOrigin {
  eLeapTrackingOrigin_DeviceCenter = 0,
  eLeapTrackingOrigin_DevicePrimaryCamera = 1
} eLeapTrackingOrigin;
typedef struct _LEAP_CONNECTION_CONFIG {
  uint32_t size;
  uint32_t flags;
  const char* server_namespace;
  eLeapTrackingOrigin tracking_origin;
} LEAP_CONNECTION_CONFIG;
typedef enum _eLeapAllocatorType {
  eLeapAllocatorType_Int8 = 0,
  eLeapAllocatorType_Uint8 = 1,
  eLeapAllocatorType_Int16 = 2,
  eLeapAllocatorType_UInt16 = 3,
  eLeapAllocatorType_Int32 = 4,
  eLeapAllocatorType_UInt32 = 5,
  eLeapAllocatorType_Float = 6,
  eLeapAllocatorType_Int64 = 8,
  eLeapAllocatorType_UInt64 = 9,
  eLeapAllocatorType_Double = 10,
} eLeapAllocatorType;
typedef struct LEAP_ALLOCATOR {
  void* (*allocate)(uint32_t size, eLeapAllocatorType typeHint, void* state);
  void (*deallocate)(void* ptr, void* state);
  void* state;
} LEAP_ALLOCATOR;
typedef struct _LEAP_CONNECTION_EVENT {
  uint32_t flags;
} LEAP_CONNECTION_EVENT;
typedef struct _LEAP_CONNECTION_LOST_EVENT {
  uint32_t flags;
} LEAP_CONNECTION_LOST_EVENT;
typedef enum _eLeapConnectionStatus {
  eLeapConnectionStatus_NotConnected = 0,
  eLeapConnectionStatus_Connected,
  eLeapConnectionStatus_HandshakeIncomplete,
  eLeapConnectionStatus_NotRunning    = 0xE7030004
} eLeapConnectionStatus;
typedef struct _LEAP_CONNECTION_INFO {
  uint32_t size;
  eLeapConnectionStatus status;
} LEAP_CONNECTION_INFO;
typedef enum _eLeapPolicyFlag {
  eLeapPolicyFlag_BackgroundFrames = 0x00000001,
  eLeapPolicyFlag_Images           = 0x00000002,
  eLeapPolicyFlag_OptimizeHMD      = 0x00000004,
  eLeapPolicyFlag_AllowPauseResume = 0x00000008,
  eLeapPolicyFlag_MapPoints        = 0x00000080,
  eLeapPolicyFlag_OptimizeScreenTop = 0x00000100,
} eLeapPolicyFlag;
typedef struct _LEAP_POLICY_EVENT {
  uint32_t reserved;
  uint32_t current_policy;
} LEAP_POLICY_EVENT;
typedef struct _LEAP_TRACKING_MODE_EVENT {
  uint32_t reserved;
  eLeapTrackingMode current_tracking_mode;
} LEAP_TRACKING_MODE_EVENT;
typedef enum _eLeapValueType {
  eLeapValueType_Unknown,
  eLeapValueType_Boolean,
  eLeapValueType_Int32,
  eLeapValueType_Float,
  eLeapValueType_String,
  FORCE_DWORD = 0x7FFFFFFF
} eLeapValueType;
typedef struct _LEAP_CONFIG_RESPONSE_EVENT {
  uint32_t requestID;
  LEAP_VARIANT value;
} LEAP_CONFIG_RESPONSE_EVENT;
typedef struct _LEAP_CONFIG_CHANGE_EVENT {
  uint32_t requestID;
  bool status;
} LEAP_CONFIG_CHANGE_EVENT;
enum eLeapDeviceCaps {
  eLeapDeviceCaps_Color      = 0x00000001,
};
typedef struct _LEAP_DEVICE_EVENT {
  uint32_t flags;
  LEAP_DEVICE_REF device;
  uint32_t status;
} LEAP_DEVICE_EVENT;
typedef enum _eLeapDeviceStatus {
  eLeapDeviceStatus_Streaming      = 0x00000001,
  eLeapDeviceStatus_Paused         = 0x00000002,
  eLeapDeviceStatus_Robust         = 0x00000004,
  eLeapDeviceStatus_Smudged        = 0x00000008,
  eLeapDeviceStatus_LowResource    = 0x00000010,
  eLeapDeviceStatus_UnknownFailure = 0xE8010000,
  eLeapDeviceStatus_BadCalibration = 0xE8010001,
  eLeapDeviceStatus_BadFirmware    = 0xE8010002,
  eLeapDeviceStatus_BadTransport   = 0xE8010003,
  eLeapDeviceStatus_BadControl     = 0xE8010004,
} eLeapDeviceStatus;
typedef struct _LEAP_DEVICE_FAILURE_EVENT {
  eLeapDeviceStatus status;
  LEAP_DEVICE hDevice;
} LEAP_DEVICE_FAILURE_EVENT;
typedef struct _LEAP_FRAME_HEADER {
  void* reserved;
  int64_t frame_id;
  int64_t timestamp;
} LEAP_FRAME_HEADER;
typedef enum _eLeapImageType {
  eLeapImageType_UNKNOWN = 0,
  eLeapImageType_Default,
  eLeapImageType_Raw
} eLeapImageType;
typedef enum _eLeapImageFormat {
  eLeapImageFormat_UNKNOWN = 0,
  eLeapImageFormat_IR = 0x317249,
  eLeapImageFormat_RGBIr_Bayer = 0x49425247,
} eLeapImageFormat;
typedef enum _eLeapPerspectiveType {
  eLeapPerspectiveType_invalid = 0,
  eLeapPerspectiveType_stereo_left = 1,
  eLeapPerspectiveType_stereo_right = 2,
  eLeapPerspectiveType_mono = 3,
} eLeapPerspectiveType;
typedef struct _LEAP_VECTOR {
  union {
    float v[3];
    struct {
      float x;
      float y;
      float z;
    };
  };
} LEAP_VECTOR;
typedef struct _LEAP_QUATERNION {
  union {
    float v[4];
    struct {
      float x;
      float y;
      float z;
      float w;
    };
  };
} LEAP_QUATERNION;
typedef struct _LEAP_BONE {
  LEAP_VECTOR prev_joint;
  LEAP_VECTOR next_joint;
  float width;
  LEAP_QUATERNION rotation;
} LEAP_BONE;
typedef struct _LEAP_DIGIT {
  int32_t finger_id;
  union {
    LEAP_BONE bones[4];
    struct {
      LEAP_BONE metacarpal;
      LEAP_BONE proximal;
      LEAP_BONE intermediate;
      LEAP_BONE distal;
    };
  };
  uint32_t is_extended;
} LEAP_DIGIT;
typedef struct _LEAP_PALM {
  LEAP_VECTOR position;
  LEAP_VECTOR stabilized_position;
  LEAP_VECTOR velocity;
  LEAP_VECTOR normal;
  float width;
  LEAP_VECTOR direction;
  LEAP_QUATERNION orientation;
} LEAP_PALM;
typedef enum _eLeapHandType {
  eLeapHandType_Left,
  eLeapHandType_Right
} eLeapHandType;
typedef struct _LEAP_HAND {
  uint32_t id;
  uint32_t flags;
  eLeapHandType type;
  float confidence;
  uint64_t visible_time;
  float pinch_distance;
  float grab_angle;
  float pinch_strength;
  float grab_strength;
  LEAP_PALM palm;
  union {
    struct {
      LEAP_DIGIT thumb;
      LEAP_DIGIT index;
      LEAP_DIGIT middle;
      LEAP_DIGIT ring;
      LEAP_DIGIT pinky;
    };
    LEAP_DIGIT digits[5];
  };
  LEAP_BONE arm;
} LEAP_HAND;
typedef struct _LEAP_TRACKING_EVENT {
  LEAP_FRAME_HEADER info;
  int64_t tracking_frame_id;
  uint32_t nHands;
  LEAP_HAND* pHands;
  float framerate;
} LEAP_TRACKING_EVENT;
typedef enum _eLeapLogSeverity {
  eLeapLogSeverity_Unknown = 0,
  eLeapLogSeverity_Critical,
  eLeapLogSeverity_Warning,
  eLeapLogSeverity_Information
} eLeapLogSeverity;
typedef struct _LEAP_LOG_EVENT {
  eLeapLogSeverity severity;
  int64_t timestamp;
  const char* message;
} LEAP_LOG_EVENT;
typedef struct _LEAP_LOG_EVENTS {
  uint32_t nEvents;
  LEAP_LOG_EVENT* events;
} LEAP_LOG_EVENTS;
typedef struct _LEAP_DEVICE_STATUS_CHANGE_EVENT {
  LEAP_DEVICE_REF device;
  uint32_t last_status;
  uint32_t status;
} LEAP_DEVICE_STATUS_CHANGE_EVENT;
typedef enum _eLeapDroppedFrameType {
  eLeapDroppedFrameType_PreprocessingQueue,
  eLeapDroppedFrameType_TrackingQueue,
  eLeapDroppedFrameType_Other
} eLeapDroppedFrameType;
typedef struct _LEAP_DROPPED_FRAME_EVENT {
  int64_t frame_id;
  eLeapDroppedFrameType type;
} LEAP_DROPPED_FRAME_EVENT;
typedef struct _LEAP_POINT_MAPPING_CHANGE_EVENT {
  int64_t frame_id;
  int64_t timestamp;
  uint32_t nPoints;
} LEAP_POINT_MAPPING_CHANGE_EVENT;
typedef struct _LEAP_POINT_MAPPING {
  int64_t frame_id;
  int64_t timestamp;
  uint32_t nPoints;
  LEAP_VECTOR* pPoints;
  uint32_t* pIDs;
} LEAP_POINT_MAPPING;
typedef struct _LEAP_HEAD_POSE_EVENT {
  int64_t timestamp;
  LEAP_VECTOR head_position;
  LEAP_QUATERNION head_orientation;
  LEAP_VECTOR head_linear_velocity;
  LEAP_VECTOR head_angular_velocity;
} LEAP_HEAD_POSE_EVENT;
typedef struct _LEAP_EYE_EVENT {
  int64_t frame_id;
  int64_t timestamp;
  LEAP_VECTOR left_eye_position;
  LEAP_VECTOR right_eye_position;
  float left_eye_estimated_error;
  float right_eye_estimated_error;
} LEAP_EYE_EVENT;
typedef struct _LEAP_IMU_EVENT {
  int64_t timestamp;
  int64_t timestamp_hw;
  uint32_t flags;
  LEAP_VECTOR accelerometer;
  LEAP_VECTOR gyroscope;
  float temperature;
} LEAP_IMU_EVENT;
typedef struct _LEAP_NEW_DEVICE_TRANSFORM {
  uint32_t reserved;
} LEAP_NEW_DEVICE_TRANSFORM;
typedef struct _LEAP_IMAGE_EVENT {
  LEAP_FRAME_HEADER info;
  LEAP_IMAGE image[2];
  LEAP_CALIBRATION calib;
} LEAP_IMAGE_EVENT;
typedef enum _eLeapEventType {
  eLeapEventType_None = 0,
  eLeapEventType_Connection,
  eLeapEventType_ConnectionLost,
  eLeapEventType_Device,
  eLeapEventType_DeviceFailure,
  eLeapEventType_Policy,
  eLeapEventType_Tracking = 0x100,
  eLeapEventType_ImageRequestError,
  eLeapEventType_ImageComplete,
  eLeapEventType_LogEvent,
  eLeapEventType_DeviceLost,
  eLeapEventType_ConfigResponse,
  eLeapEventType_ConfigChange,
  eLeapEventType_DeviceStatusChange,
  eLeapEventType_DroppedFrame,
  eLeapEventType_Image,
  eLeapEventType_PointMappingChange,
  eLeapEventType_TrackingMode,
  eLeapEventType_LogEvents,
  eLeapEventType_HeadPose,
  eLeapEventType_Eyes,
  eLeapEventType_IMU,
  eLeapEventType_NewDeviceTransform
} eLeapEventType;
typedef struct _LEAP_CONNECTION_MESSAGE {
  uint32_t size;
  eLeapEventType type;
  union {
    const void* pointer;
    const LEAP_CONNECTION_EVENT* connection_event;
    const LEAP_CONNECTION_LOST_EVENT* connection_lost_event;
    const LEAP_DEVICE_EVENT* device_event;
    const LEAP_DEVICE_STATUS_CHANGE_EVENT* device_status_change_event;
    const LEAP_POLICY_EVENT* policy_event;
    const LEAP_DEVICE_FAILURE_EVENT* device_failure_event;
    const LEAP_TRACKING_EVENT* tracking_event;
    const LEAP_TRACKING_MODE_EVENT* tracking_mode_event;
    const LEAP_LOG_EVENT* log_event;
    const LEAP_LOG_EVENTS* log_events;
    const LEAP_CONFIG_RESPONSE_EVENT* config_response_event;
    const LEAP_CONFIG_CHANGE_EVENT* config_change_event;
    const LEAP_DROPPED_FRAME_EVENT* dropped_frame_event;
    const LEAP_IMAGE_EVENT* image_event;
    const LEAP_POINT_MAPPING_CHANGE_EVENT* point_mapping_change_event;
    const LEAP_HEAD_POSE_EVENT* head_pose_event;
    const LEAP_EYE_EVENT* eye_event;
    const LEAP_IMU_EVENT* imu_event;
    const LEAP_NEW_DEVICE_TRANSFORM* new_device_transform_event;
  };
  uint32_t device_id;
} LEAP_CONNECTION_MESSAGE;
typedef struct _LEAP_CLOCK_REBASER *LEAP_CLOCK_REBASER;