Assets/LeapMotion/Core/Plugins/LeapCSharp/LeapC.cs

/******************************************************************************\
* Copyright (C) 2012-2017 Leap Motion, Inc. All rights reserved.               *
* Leap Motion proprietary and confidential. Not for distribution.              *
* Use subject to the terms of the Leap Motion SDK Agreement available at       *
* https://developer.leapmotion.com/sdk_agreement, or another agreement         *
* between Leap Motion and you, your company or other organization.             *
\******************************************************************************/


namespace LeapInternal {
  using System;
  using System.Runtime.InteropServices;

  public enum eLeapConnectionStatus : uint {
    eLeapConnectionStatus_NotConnected = 0, //!< // A connection has been established
    eLeapConnectionStatus_Connected, //!< The connection has not been completed. Call OpenConnection.
    eLeapConnectionStatus_HandshakeIncomplete, //!< The connection handshake has not completed
    eLeapConnectionStatus_NotRunning = 0xE7030004 //!< A connection could not be established because the server does not appear to be running
  };

  public enum eLeapDeviceCaps : uint {
    eLeapDeviceCaps_Color = 0x00000001, //!< The device can send color images
  };

  public enum eLeapDeviceType : uint {
    eLeapDeviceType_Peripheral = 0x0003, //!< The Leap Motion consumer peripheral
    eLeapDeviceType_Dragonfly = 0x1102, //!< Internal research product codename "Dragonfly"
    eLeapDeviceType_Nightcrawler = 0x1201 //!< Internal research product codename "Nightcrawler"
  };

  public enum eDistortionMatrixType {
    eDistortionMatrixType_64x64 //!< A 64x64 matrix of pairs of points.
  };

  public enum eLeapPolicyFlag : uint {
    eLeapPolicyFlag_BackgroundFrames = 0x00000001, //!< Allows frame receipt even when this application is not the foreground application
    eLeapPolicyFlag_Images = 0x00000002, //!< Allow streaming images
    eLeapPolicyFlag_OptimizeHMD = 0x00000004, //!< Optimize HMD Policy Flag
    eLeapPolicyFlag_AllowPauseResume = 0x00000008, //!< Modifies the security token to allow calls to LeapPauseDevice to succeed
    eLeapPolicyFlag_MapPoints = 0x00000080, //!< Allows streaming map points
    eLeapPolicyFlag_IncludeAllFrames = 0x00008000, //!< Include native-app frames when receiving background frames.
    eLeapPolicyFlag_NonExclusive = 0x00800000  //!< Allow background apps to also receive frames.
  };


  public enum eLeapDeviceStatus : uint {
    eLeapDeviceStatus_Streaming = 0x00000001, //!< Presently sending frames to all clients that have requested them
    eLeapDeviceStatus_Paused = 0x00000002, //!< Device streaming has been paused
    eLeapDeviceStatus_UnknownFailure = 0xE8010000, //!< The device has failed, but the failure reason is not known
    eLeapDeviceStatus_BadCalibration = 0xE8010001, //!< Bad calibration, cannot send frames
    eLeapDeviceStatus_BadFirmware = 0xE8010002, //!< Corrupt firmware and/or cannot receive a required firmware update
    eLeapDeviceStatus_BadTransport = 0xE8010003, //!< Exhibiting USB communications issues
    eLeapDeviceStatus_BadControl = 0xE8010004, //!< Missing critical control interfaces needed for communication
  };

  public enum eLeapImageType {
    eLeapImageType_Unknown = 0,
    eLeapImageType_Default, //!< Default processed IR image
    eLeapImageType_Raw //!< Image from raw sensor values
  };

  public enum eLeapImageFormat : uint {
    eLeapImageFormat_UNKNOWN = 0, //!< Unknown format (shouldn't happen)
    eLeapImageType_IR = 0x317249, //!< An infrared image
    eLeapImageType_RGBIr_Bayer = 0x49425247, //!< A Bayer RGBIr image with uncorrected RGB channels
  };

  public enum eLeapPerspectiveType {
    eLeapPerspectiveType_invalid = 0, //!< Reserved, invalid
    eLeapPerspectiveType_stereo_left = 1, //!< A canonically left image
    eLeapPerspectiveType_stereo_right = 2, //!< A canonically right image
    eLeapPerspectiveType_mono = 3, //!< Reserved for future use
  };

  public enum eLeapImageRequestError {
    eLeapImageRequestError_Unknown, //!< The reason for the failure is unknown
    eLeapImageRequestError_ImagesDisabled, //!< Images are turned off in the user's configuration
    eLeapImageRequestError_Unavailable, //!< The requested images are not available
    eLeapImageRequestError_InsufficientBuffer, //!< The provided buffer is not large enough for the requested images
  }

  public enum eLeapHandType {
    eLeapHandType_Left, //!< Left hand
    eLeapHandType_Right //!< Right hand
  };

  public enum eLeapLogSeverity {
    eLeapLogSeverity_Unknown = 0,
    eLeapLogSeverity_Critical,
    eLeapLogSeverity_Warning,
    eLeapLogSeverity_Information
  };

  public enum eLeapValueType : int {
    eLeapValueType_Unknown,
    eLeapValueType_Boolean,
    eLeapValueType_Int32,
    eLeapValueType_Float,
    eLeapValueType_String
  };

  public enum eLeapAllocatorType : uint {
    eLeapAllocatorType_Int8 = 0,
    eLeapAllocatorType_Uint8 = 1,
    eLeapAllocatorType_Int16 = 2,
    eLeapAllocatorType_UInt16 = 3,
    eLeapAllocatorType_Int32 = 4,
    eLeapAllocatorType_UInt32 = 5,
    eLeapAllocatorType_Float = 6,
    eLeapAllocatorType_Int64 = 8,
    eLeapAllocatorType_UInt64 = 9,
    eLeapAllocatorType_Double = 10,
  };

  public enum eLeapRS : uint {
    eLeapRS_Success = 0x00000000, //!< The operation completed successfully
    eLeapRS_UnknownError = 0xE2010000, //!< An unknown error has occurred
    eLeapRS_InvalidArgument = 0xE2010001, //!< An invalid argument was specified
    eLeapRS_InsufficientResources = 0xE2010002, //!< Insufficient resources existed to complete the request
    eLeapRS_InsufficientBuffer = 0xE2010003, //!< The specified buffer was not large enough to complete the request
    eLeapRS_Timeout = 0xE2010004, //!< The requested operation has timed out
    eLeapRS_NotConnected = 0xE2010005, //!< The connection is not open
    eLeapRS_HandshakeIncomplete = 0xE2010006, //!< The request did not succeed because the client has not finished connecting to the server
    eLeapRS_BufferSizeOverflow = 0xE2010007, //!< The specified buffer size is too large
    eLeapRS_ProtocolError = 0xE2010008, //!< A communications protocol error has occurred
    eLeapRS_InvalidClientID = 0xE2010009, //!< The server incorrectly specified zero as a client ID
    eLeapRS_UnexpectedClosed = 0xE201000A, //!< The connection to the service was unexpectedly closed while reading a message
    eLeapRS_CannotCancelImageFrameRequest = 0xE201000B, //!< An attempt to cancel an image request failed (either too late, or the image token was invalid)
    eLeapRS_NotAvailable = 0xE7010002, //!< A connection could not be established to the Leap Motion service
    eLeapRS_NotStreaming = 0xE7010004, //!< The requested operation can only be performed while the device is streaming
                                       /**
                                       * It is possible that the device identifier
                                       * is invalid, or that the device has been disconnected since being enumerated.
                                       */
    eLeapRS_CannotOpenDevice = 0xE7010005, //!< The specified device could not be opened. Invalid device identifier or the device has been disconnected since being enumerated.
  };

  public enum eLeapEventType {
    eLeapEventType_None = 0,
    eLeapEventType_Connection,
    eLeapEventType_ConnectionLost,
    eLeapEventType_Device,

    /// <summary>
    /// Note that unplugging a device generates an eLeapEventType_DeviceLost event
    /// message, not a failure message.
    /// </summary>
    eLeapEventType_DeviceFailure,

    eLeapEventType_Policy,
    eLeapEventType_Tracking = 0x100,
    eLeapEventType_ImageRequestError,
    eLeapEventType_ImageComplete,
    eLeapEventType_LogEvent,
    eLeapEventType_DeviceLost,
    eLeapEventType_ConfigResponse,
    eLeapEventType_ConfigChange,
    eLeapEventType_DeviceStatusChange,
    eLeapEventType_DroppedFrame,
    eLeapEventType_Image,
    eLeapEventType_PointMappingChange,
    eLeapEventType_LogEvents,
    eLeapEventType_HeadPose
  };

  public enum eLeapDeviceFlag : uint {
    /**
    * This flag is updated when the user pauses or resumes tracking on the device from the Leap control
    * panel.  Modification of this flag will fail if the AllowPauseResume policy is not set on this device
    * object.
    */
    eLeapDeviceFlag_Stream = 0x00000001 //!< Flag set if the device is presently streaming frames
  };
  public enum eLeapConnectionFlags : uint {
    eLeapConnectionFlags_Default = 0x00000000, //!< Currently there is only a default state flag.
  };

  public enum eLeapDroppedFrameType {
    eLeapDroppedFrameType_PreprocessingQueue,
    eLeapDroppedFrameType_TrackingQueue,
    eLeapDroppedFrameType_Other
  };

  //Note the following LeapC structs are just IntPtrs in C#:
  // LEAP_CONNECTION is an IntPtr
  // LEAP_DEVICE is an IntPtr
  // LEAP_CLOCK_REBASER is an IntPtr

  [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
  public struct LEAP_CONNECTION_CONFIG {
    public UInt32 size;
    public UInt32 flags;
    public string server_namespace;
  }

  [StructLayout(LayoutKind.Sequential, Pack = 1)]
  public struct LEAP_CONNECTION_INFO {
    public UInt32 size;
    public eLeapConnectionStatus status;
  }

  [StructLayout(LayoutKind.Sequential, Pack = 1)]
  public struct LEAP_CONNECTION_EVENT {
    public UInt32 flags;
  }

  [StructLayout(LayoutKind.Sequential, Pack = 1)]
  public struct LEAP_DEVICE_REF {
    public IntPtr handle; //void *
    public UInt32 id;
    public LEAP_DEVICE_REF(IntPtr handle, UInt32 id) {
      this.handle = handle;
      this.id = id;
    }
  }

  [StructLayout(LayoutKind.Sequential, Pack = 1)]
  public struct LEAP_CONNECTION_LOST_EVENT {
    public UInt32 flags;
  }

  [StructLayout(LayoutKind.Sequential, Pack = 1)]
  public struct LEAP_ALLOCATOR {
    public LeapInternal.Allocate allocate;
    public LeapInternal.Deallocate deallocate;
    public UInt32 number;
  }

  [StructLayout(LayoutKind.Sequential, Pack = 1)]
  public struct LEAP_DEVICE_EVENT {
    public UInt32 flags;
    public LEAP_DEVICE_REF device;
  }

  [StructLayout(LayoutKind.Sequential, Pack = 1)]
  public struct LEAP_DEVICE_FAILURE_EVENT {
    public eLeapDeviceStatus status;
    public IntPtr hDevice;
  }

  [StructLayout(LayoutKind.Sequential, Pack = 1)]
  public struct LEAP_TRACKING_EVENT {
    public LEAP_FRAME_HEADER info;
    public Int64 tracking_id;
    public LEAP_VECTOR interaction_box_size;
    public LEAP_VECTOR interaction_box_center;
    public UInt32 nHands;
    public IntPtr pHands; //LEAP_HAND*
    public float framerate;
  }

  [StructLayout(LayoutKind.Sequential, Pack = 1)]
  public struct LEAP_DROPPED_FRAME_EVENT {
    public Int64 frame_id;
    public eLeapDroppedFrameType reason;
  }

  [StructLayout(LayoutKind.Sequential, Pack = 1)]
  public struct LEAP_POINT_MAPPING_CHANGE_EVENT {
    public Int64 frame_id;
    public Int64 timestamp;
    public UInt32 nPoints;
  }

  [StructLayout(LayoutKind.Sequential, Pack = 1)]
  public struct LEAP_POINT_MAPPING {
    public Int64 frame_id;
    public Int64 timestamp;
    public UInt32 nPoints;
    public LEAP_VECTOR[] points;
    public UInt32[] ids;
  }

  [StructLayout(LayoutKind.Sequential, Pack = 1)]
  public struct LEAP_HEAD_POSE_EVENT {
    public Int64 timestamp;
    public LEAP_VECTOR head_position;
    public LEAP_QUATERNION head_orientation;
  }

  [StructLayout(LayoutKind.Sequential, Pack = 1)]
  public struct LEAP_CONNECTION_MESSAGE {
    public UInt32 size;
    public eLeapEventType type;
    public IntPtr eventStructPtr;
  }


  [StructLayout(LayoutKind.Sequential, Pack = 1)]
  public struct LEAP_DISCONNECTION_EVENT {
    public UInt32 reserved;
  }
